# Axum-OAuth2-With-TwitterX-Google-And-Local-Postgres

./: .gitignore  Cargo.toml  README.md  docker-compose.yml  run.sh  test_logout.sh  test_oauth.sh
src/: errors.rs  main.rs
src/config/: router.rs
src/handlers/: auth.rs  health.rs  home.rs  mod.rs  user.rs
src/middleware/: auth.rs
src/oauth/: google.rs  mod.rs  twitter.rs  types.rs
src/services/: session.rs
src/state/: app_state.rs
static/: index.html
